More Functions Math

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="container-fluid-form">
                     <label for="expressao">Expressão matemática (somente X):</label>
                     <input type="text" id="expressao" value="POW(x, 3) - 9*x + 3" class="form-control" />
-                    OBS: para alguns operações existem funções. Para potência escreva POW(x, y).
+                    OBS: para alguns operações existem funções. Para potência escreva POW(x, y), LOG(x, base), LN(x).
                 </div>
 
                 <br/>
